// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/props props.container.js should map redux model into properties array 1`] = `
<div
  className=""
  style={Object {}}
>
  <div
    className="css-14dcf8k"
  >
    props
  </div>
  <div />
</div>
`;

exports[`component/props props.jsx should render by default 1`] = `
<div
  className=""
  style={Object {}}
>
  <div
    className="css-14dcf8k"
  >
    props
  </div>
  <div />
</div>
`;

exports[`component/props props.jsx should render inputs following given properties 1`] = `
<div
  className=""
  style={Object {}}
>
  <div
    className="css-14dcf8k"
  >
    props
  </div>
  <div>
    <input
      name="prop1"
    />
    <input
      name="prop2"
    />
  </div>
</div>
`;

exports[`component/props props.jsx should take custom className 1`] = `
<div
  className="custom"
  style={Object {}}
>
  <div
    className="css-14dcf8k"
  >
    props
  </div>
  <div />
</div>
`;

exports[`component/props props.jsx should take custom style 1`] = `
<div
  className=""
  style={
    Object {
      "backgroundColor": "red",
    }
  }
>
  <div
    className="css-14dcf8k"
  >
    props
  </div>
  <div />
</div>
`;
